# Python-logging-properly

./: README.md
example_app/: app.py  pyproject.toml
example_app/config/: logging_config.yaml
example_app/src/examples/: logging_utils.py  services.py
example_app/src/logging_utils/: __init__.py  filters.py  formatters.py  session.py  setup_logging.py
